@@ -1,7 +1,22 @@
 {
-  "count": 16,
-  "uniques": 13,
+  "count": 3,
+  "uniques": 3,
   "clones": [
+    {
+      "timestamp": "2026-01-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2026-01-22T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-01-23T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
     {
       "timestamp": "2026-01-24T00:00:00Z",
       "count": 1,
@@ -56,21 +71,6 @@
       "timestamp": "2026-02-03T00:00:00Z",
       "count": 0,
       "uniques": 0
-    },
-    {
-      "timestamp": "2026-02-04T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-02-05T00:00:00Z",
-      "count": 11,
-      "uniques": 8
-    },
-    {
-      "timestamp": "2026-02-06T00:00:00Z",
-      "count": 3,
-      "uniques": 3
     }
   ]
 }
