@@ -1,3 +1,12 @@
+2026-02-17T01:18:36Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22082590444 # 880
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-17
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 1159 1639 / 1172 1655
+* notice: next accum: outdated-unq outdated-all / unq all: 1159 1639 / 1162 1642
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [] / []
+
 2026-02-16T01:19:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22046912417 # 879
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-16
